--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,7 @@
     --bg-color: #f0f0f0;
     --text-color: #333;
     --card-bg-color: #fff;
-    --header-bg-color: #F84913;
+    --header-bg-color: #EC1C24;
     --footer-bg-color: #fff;
     --timeline-color: #ccc;
     --label-bg-color: #e0e0e0;
