--- a/public/styles.css
+++ b/public/styles.css
@@ -21,7 +21,7 @@ body.night-mode {
     --bg-color: #1a1a1a;
     --text-color: #f0f0f0;
     --card-bg-color: #2a2a2a;
-    --header-bg-color: #2a2a2a;
+    --header-bg-color: #660D13;
     --footer-bg-color: #2a2a2a;
     --timeline-color: #555;
 }
