--- a/public/styles.css
+++ b/public/styles.css
@@ -10,12 +10,12 @@
 }
 
 body {
+    margin: 0;
+    padding: 0;
     font-family: Arial, sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
     transition: background-color 0.3s, color 0.3s;
-    margin: 0;
-    padding: 0;
 }
 
 body.night-mode {
@@ -29,11 +29,15 @@ body.night-mode {
 
 header {
     background-color: var(--header-bg-color);
+    width: 100%;
     padding: 10px 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 nav {
+    max-width: var(--max-content-width);
+    margin: 0 auto;
+    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -54,9 +58,10 @@ nav {
 }
 
 .banner {
-    position: relative;
+    width: 100%;
     height: 320px;
     overflow: hidden;
+    position: relative;
     max-width: var(--max-content-width);
     margin: 0 auto;
 }
@@ -70,7 +75,7 @@ nav {
 .avatar {
     position: absolute;
     bottom: -30px;
-    left: var(--timeline-left-space);
+    left: 50%;
     transform: translateX(-50%);
     width: 60px;
     height: 60px;
@@ -82,8 +87,8 @@ nav {
 .timeline {
     position: relative;
     padding: 40px 0 20px 0;
-    margin: 0 auto;
     max-width: var(--max-content-width);
+    margin: 0 auto;
 }
 
 .timeline::before {
@@ -211,11 +216,12 @@ a:hover {
 /* 详情页样式 */
 .post-detail {
     max-width: var(--max-content-width);
-    margin: 0 auto;
-    padding: 40px 20px;
+    margin: 40px auto;
+    /* 添加上下边距 */
     background-color: var(--card-bg-color);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    padding: 40px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .post-detail h1 {
@@ -236,6 +242,11 @@ a:hover {
     font-size: 1.1em;
     line-height: 1.6;
     margin-bottom: 40px;
+}
+
+.post-content img {
+    max-width: 100%;
+    height: auto;
 }
 
 .comment-section {
@@ -288,8 +299,14 @@ a:hover {
 }
 
 footer {
+    width: 100%;
     background-color: var(--footer-bg-color);
-    padding: 20px;
+    padding: 20px 0;
+}
+
+.footer-content {
+    max-width: var(--max-content-width);
+    margin: 0 auto;
     text-align: center;
 }
 
@@ -337,7 +354,7 @@ footer {
 
 .timeline-point {
     position: absolute;
-    left: calc(var(--timeline-left-space) - 20px);
+    left: calc(var(--timeline-left-space) - 21px);
     top: 20px;
     width: 40px;
     height: 40px;
