--- a/public/styles.css
+++ b/public/styles.css
@@ -357,7 +357,7 @@ footer {
         padding: 20px;
     }
 
-    .post-detail .post-content {
+    .post-detail {
         margin-left: 20px;
         margin-right: 20px;
     }
